--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.3"
-  },
-  "devDependencies": {
+    "discord.js": "^12.5.3",
     "dotenv": "^10.0.0"
   }
 }
